[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyahr"]

[project]
name = "asynchronous_http_requests"
version = "0.0.0"
authors = [
  { name="Philipp Kroll", email="example@web.de" },
]
description = "This Package provides asynchronous HTTP Request Capabilities."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "-"
Issues = "https://github.com/Philipp-Co/async_http_requests/issues"
